Closed Bug 1524282 Opened 7 years ago Closed 7 years ago

c.adsco.re shows up as Blocked in the Trackers subview

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

(Whiteboard: [anti-tracking])

Attachments

(1 file)

STR:

  1. Set Content Blocking to Standard.
  2. Go to https://atitude32.blogspot.com/.
  3. Check out the Trackers subpanel in the control centre.

c.adsco.re shows up as Blocked. It shouldn't be.

await gBrowser.selectedBrowser.getContentBlockingLog()
"{
"https://www.blogger.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 128]],
"https://pagead2.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 10]],
"https://dl.dropboxusercontent.com\": [[32768, true, 1]],
"https://apis.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 23]],
"https://lizard1301.spider.ad\": [[32768, true, 1]],
"https://venom1301.spider.ad\": [[32768, true, 1]],
"https://www.google-analytics.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 9]],
"https://atitude32.blogspot.com\": [[32768, true, 1]],
"https://c1.popads.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://cdnjs.cloudflare.com\": [[32768, true, 1]],
"https://sb.scorecardresearch.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 24]],
"https://tag.navdmp.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 3]],
"https://tags.t.tailtarget.com\": [[32768, true, 1]],
"https://freehostedscripts.net\": [[32768, true, 1]],
"https://cdn4.spider.ad\": [[32768, true, 1]],
"https://analytics.shareaholic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://s3.amazonaws.com\": [[32768, true, 1]],
"https://certify.alexametrics.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://cdn.viglink.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 6]],
"https://partner.shareaholic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://api.nobeta.com.br\": [[32768, true, 1]],
"https://d.t.tailtarget.com\": [[32768, true, 1]],
"https://accounts.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 110]],
"https://redir.adap.tv\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://ssl.gstatic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://adservice.google.ca\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://adservice.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"null": [[32768, true, 1]],
"https://googleads.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 13]],
"https://cdn.navdmp.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ads.adaptv.advertising.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://www.googletagservices.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://px.owneriq.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 11]],
"https://i.simpli.fi\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ml314.com\": [[32768, true, 1]],
"https://cdn.tynt.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://c.adsco.re\": [[4096, true, 1]],
"https://tpc.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://ic.tynt.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://idpix.media6degrees.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://loadus.exelator.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://adc.nobeta.com.br\": [[32768, true, 1]],
"https://us-u.openx.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 3]],
"https://cm.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ib.adnxs.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://de.tynt.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://api.viglink.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ps.eyeota.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://dp2.33across.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://tags.bluekai.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://load77.exelator.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://securepubads.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://b.t.tailtarget.com\": [[32768, true, 1]],
"https://tt-9826-4.seg.t.tailtarget.com\": [[32768, true, 1]],
"https://serve.popads.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]]
}
"

https://gtop100.com/topsites/MapleStory/sitedetails/MapleRoyals-The-Nostalgic-MapleStory-Server-79510?vote=1 is another case, cdn.funcaptcha.com gets blocked.

await gBrowser.selectedBrowser.getContentBlockingLog()
"{
"https://gtop100.com\": [[32768, true, 1]],
"https://www.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://client.arkoselabs.com\": [[32768, true, 1]],
"https://pagead2.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 5]],
"https://apis.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://www.gstatic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 5]],
"https://www.youtube.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 200]],
"https://connect.facebook.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://www.google-analytics.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 27]],
"https://graph.facebook.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://cdn.funcaptcha.com\": [[64, true, 1]],
"https://adservice.google.ca\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://adservice.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://googleads.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 40]],
"https://staticxx.facebook.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 3]],
"https://www.facebook.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 39]],
"https://static.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://www.googletagservices.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://tpc.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 5]],
"null": [[32768, true, 1]],
"https://scontent-yyz1-1.xx.fbcdn.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 6]]
}
"

(In reply to :Ehsan Akhgari from comment #1)

https://gtop100.com/topsites/MapleStory/sitedetails/MapleRoyals-The-Nostalgic-MapleStory-Server-79510?vote=1 is another case, cdn.funcaptcha.com gets blocked.

await gBrowser.selectedBrowser.getContentBlockingLog()
"{
"https://gtop100.com\": [[32768, true, 1]],
"https://www.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://client.arkoselabs.com\": [[32768, true, 1]],
"https://pagead2.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 5]],
"https://apis.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://www.gstatic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 5]],
"https://www.youtube.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 200]],
"https://connect.facebook.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://www.google-analytics.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 27]],
"https://graph.facebook.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://cdn.funcaptcha.com\": [[64, true, 1]],
"https://adservice.google.ca\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://adservice.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://googleads.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 40]],
"https://staticxx.facebook.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 3]],
"https://www.facebook.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 39]],
"https://static.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://www.googletagservices.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://tpc.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 5]],
"null": [[32768, true, 1]],
"https://scontent-yyz1-1.xx.fbcdn.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 6]]
}
"

OK, in this case cdn.funcaptcha.com is blocked with STATE_BLOCKED_FINGERPRINTING_CONTENT. This is exactly why I didn't want the patch in bug 1522210 to land with the UI bits, FWIW. This made us waste some time today... :-(

c.adsco.re in comment 0 is however blocked with STATE_BLOCKED_TRACKING_CONTENT.

Sigh... I think the log in comment 0 was from an old build before bug 1522210.

Now I get:

await gBrowser.selectedBrowser.getContentBlockingLog()
"{
"https://www.blogger.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 48]],
"https://pagead2.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 11]],
"https://dl.dropboxusercontent.com\": [[32768, true, 1]],
"https://apis.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 23]],
"https://lizard1301.spider.ad\": [[32768, true, 1]],
"https://venom1301.spider.ad\": [[32768, true, 1]],
"https://www.google-analytics.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 9]],
"https://atitude32.blogspot.com\": [[32768, true, 1]],
"https://c1.popads.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://sb.scorecardresearch.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 21]],
"https://tag.navdmp.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 3]],
"https://tags.t.tailtarget.com\": [[32768, true, 1]],
"https://freehostedscripts.net\": [[32768, true, 1]],
"https://cdn4.spider.ad\": [[32768, true, 1]],
"https://api.nobeta.com.br\": [[32768, true, 1]],
"https://s3.amazonaws.com\": [[32768, true, 1]],
"https://certify.alexametrics.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://d.t.tailtarget.com\": [[32768, true, 1]],
"https://cdnjs.cloudflare.com\": [[32768, true, 1]],
"https://analytics.shareaholic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://redir.adap.tv\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://cdn.viglink.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 6]],
"https://partner.shareaholic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://px.owneriq.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 11]],
"https://i.simpli.fi\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ml314.com\": [[32768, true, 1]],
"https://cdn.tynt.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"null": [[32768, true, 1]],
"https://cdn.navdmp.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://adservice.google.ca\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://adservice.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://googleads.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 13]],
"https://ads.adaptv.advertising.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://www.googletagservices.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ic.tynt.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://accounts.google.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 30]],
"https://ssl.gstatic.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://us-u.openx.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 3]],
"https://cm.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ib.adnxs.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://c.adsco.re\": [[64, true, 1]],
"https://de.tynt.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://api.viglink.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://ps.eyeota.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://dp2.33across.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://loadus.exelator.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://tags.bluekai.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://adc.nobeta.com.br\": [[32768, true, 1]],
"https://tpc.googlesyndication.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 2]],
"https://load77.exelator.com\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]],
"https://securepubads.g.doubleclick.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 4]],
"https://b.t.tailtarget.com\": [[32768, true, 1]],
"https://tt-9826-4.seg.t.tailtarget.com\": [[32768, true, 1]],
"https://serve.popads.net\": [[8192, true, 1], [32768, true, 1], [536870912, true, 1]]
}
"

So c.adsco.re also is receiving STATE_BLOCKED_FINGERPRINTING_CONTENT so it is blocked for that reason...

I'm gonna resolve this as RESOLVED INVALID I guess? I don't think fixing the UI right now is worth it since Johann is working on actually landing proper UI patches on top of the Gecko side patches.

Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → INVALID

Actually Steven suggested to pref off these features before the UI is ready, and I agree with him.

Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Assignee: nobody → ehsan
Status: REOPENED → ASSIGNED
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9097dc60840f Disable fingerprinting/cryptomining blocking on Nightly while the UI bits aren't ready yet; r=baku
Status: ASSIGNED → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 67
Component: Tracking Protection → Privacy: Anti-Tracking
Product: Firefox → Core
Target Milestone: Firefox 67 → ---
Whiteboard: [anti-tracking]
Target Milestone: --- → mozilla67
Depends on: 1525524
QA Whiteboard: [qa-67b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: