Bug 1524282 - Disable fingerprinting/cryptomining blocking on Nightly while the UI bits aren't ready yet; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D18274